Make photo delete button visible on firefox. [FIXES: #55799950]

--- a/app/assets/stylesheets/basics/_photos.sass
+++ b/app/assets/stylesheets/basics/_photos.sass
@@ -23,13 +23,11 @@
 
 
   form.button_to
-    width: 0px
-    height: 0px
 
     input.delete
       position: relative
-      top: 102px
-      right: 30px
+      top: -27px
+      float: right
       background: transparent
       line-height: normal
       border: 0px
